<resources>
    <string name="app_name">My Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_dob">DOB (DD/MM/YYYY)</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone">Phone No"</string>
    <string name="hint_profession">Profession"</string>
    <string name="hint_email">Email</string>
    <string name="enter_name_pass">Enter a valid username and password</string>
    <string name="user_name">Username</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="uphone">Your Phone No.</string>
    <string name="ephone1">Emergency Contact 1</string>
    <string name="ephone2">Emergency Contact 2</string>
    <string name="ephone3">Emergency Contact 3</string>
    <string name="remember_me">Remember Me</string>
    <string name="no_account">Create An Account</string>
    <string name="email_id">Email</string>
    <string name="notice_registration">Please enter your information before registering</string>
    <string name="disclaimer">Please note: We take privacy very seriously! \n Your data is strictly used for analysis and product improvement purposes.</string>
    <string name="regist">Register</string>
</resources>