<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            android:layout_alignEnd="@+id/textView12"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Sign In"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="27dp"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/edit_phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:hint="@string/hint_email"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:hintTextAppearance="@style/CustomTextAppearance">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_pass_layout"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="27dp"
            app:hintTextAppearance="@style/CustomTextAppearance"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pass_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/edit_phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                app:hintTextAppearance="@style/CustomTextAppearance"

                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColorHint="@color/colorDarkBlue"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="146dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBlue"
            android:textSize="22sp"

            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/enter_name_pass"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_pass_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorDarkBlue"
            android:text="Sign In"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/sign_in"
            android:layout_alignBottom="@+id/sign_in"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:text="@string/no_account"
            android:textColor="@color/colorDarkBlue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/remember_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_pass_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/remember_me"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/signin_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_pass_layout"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/sign_in" />

    </RelativeLayout>
</ScrollView>